@@ -1,5 +1,6 @@
 2021-09-28 Danilo Chang
 
+	* Implement command: computeCorrespondEpilines, findFundamentalMat
 	* Implement command: solvePnP
 
 2021-09-27 Danilo Chang
